[gd_scene load_steps=2 format=3 uid="uid://card_scene"]

[ext_resource type="Script" path="res://scripts/components/card.gd" id="1_card"]

[node name="Card" type="Control"]
custom_minimum_size = Vector2(160, 230)
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 230.0
script = ExtResource("1_card")

[node name="SkillArt" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 8.0
offset_top = 18.0
offset_right = 152.0
offset_bottom = 106.0
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="TemplateFrame" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="CardArt" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="CostLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 38.0
offset_bottom = 38.0
mouse_filter = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.48
anchor_right = 1.0
anchor_bottom = 0.56
offset_left = 12.0
offset_right = -12.0
grow_horizontal = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.1, 0.05, 0, 1)
theme_override_colors/font_outline_color = Color(0.9, 0.8, 0.5, 1)
theme_override_constants/outline_size = 0
text = "Card Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.58
anchor_right = 1.0
anchor_bottom = 0.95
offset_left = 14.0
offset_top = 0.0
offset_right = -14.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 9
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
bbcode_enabled = true
text = "Card description goes here."
fit_content = false
scroll_active = false
autowrap_mode = 3

[node name="Highlight" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopLeft" type="ColorRect" parent="Highlight"]
layout_mode = 1
anchors_preset = 0
offset_right = 25.0
offset_bottom = 25.0
color = Color(1, 0.85, 0.3, 0.6)

[node name="TopRight" type="ColorRect" parent="Highlight"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -25.0
offset_bottom = 25.0
grow_horizontal = 0
color = Color(1, 0.85, 0.3, 0.6)

[node name="BottomLeft" type="ColorRect" parent="Highlight"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -25.0
offset_right = 25.0
grow_vertical = 0
color = Color(1, 0.85, 0.3, 0.6)

[node name="BottomRight" type="ColorRect" parent="Highlight"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -25.0
grow_horizontal = 0
grow_vertical = 0
color = Color(1, 0.85, 0.3, 0.6)
